tests/snapshots/usage/destinations__pause.snap
---
source: tests/cli/snapshots.rs
---
$ vendo destinations pause
exit: 2
--- stderr ---
error: the following required arguments were not provided:
  <destinationId>

Usage: vendo destinations pause <destinationId>

For more information, try '--help'.

$ vendo destinations pause --json
exit: 2
--- stderr ---
{"error":{"message":"the following required arguments were not provided:\n  <destinationId>","code":null,"status":null,"requestId":null}}
