tests/snapshots/usage/destinations__resume.snap
---
source: tests/cli/snapshots.rs
---
$ vendo destinations resume
exit: 2
--- stderr ---
error: the following required arguments were not provided:
  <destinationId>

Usage: vendo destinations resume <destinationId>

For more information, try '--help'.

$ vendo destinations resume --json
exit: 2
--- stderr ---
{"error":{"message":"the following required arguments were not provided:\n  <destinationId>","code":null,"status":null,"requestId":null}}
