tests/snapshots/usage/destinations__sync.snap
---
source: tests/cli/snapshots.rs
---
$ vendo destinations sync
exit: 2
--- stderr ---
error: the following required arguments were not provided:
  <destinationId>

Usage: vendo destinations sync <destinationId>

For more information, try '--help'.

$ vendo destinations sync --json
exit: 2
--- stderr ---
{"error":{"message":"the following required arguments were not provided:\n  <destinationId>","code":null,"status":null,"requestId":null}}
